compiler/tests/fail/arm-m4/intrinsic_rev16S.jazz
export
fn rev16(reg u32 x) -> reg u32 {
    reg u32 y;

    ?{}, y = #REV16S(x);
    return y;
}
